--- a/lesson_12/index.html
+++ b/lesson_12/index.html
@@ -47,25 +47,25 @@
 			<div class="row">
 				<div class="col-lg-3 col-md-6">
 					<div class="feature-box">
-						<img src="/img/1.png" alt="1 преимущество">
+						<img src="img/1.png" alt="1 преимущество">
 						<p>Первое преимущество</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature-box">
-						<img src="/img/2.png" alt="1 преимущество">
+						<img src="img/2.png" alt="2 преимущество">
 						<p>Второе преимущество</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature-box">
-						<img src="/img/3.png" alt="1 преимущество">
+						<img src="img/3.png" alt="3 преимущество">
 						<p>Третье преимущество</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature-box">
-						<img src="/img/4.png" alt="1 преимущество">
+						<img src="img/4.png" alt="4 преимущество">
 						<p>Четвертое преимущество</p>
 					</div>
 				</div>
